***************************************

* #1230622 by DamienMcKenna: Missed a line when I originally rerolled this
  patch.
* #943842 by DamienMcKenna: Allow the qTip file to be loaded from multiple
  paths, but cache the path to offset the performance hit.
* #943842 by DamienMcKenna: Now includes proper Libraries API support as the
  first location checked for the qTip JS file.


Menu_MiniPanels 7.x-1.0-beta4, 2011-07-31
*****************************************

* #1230686 by davidwhthomas: Fatfingered the last patch.


Menu_MiniPanels 7.x-1.0-beta3, 2011-07-30
*****************************************
* #1221566 by DamienMcKenna: Added hook_menu_minipanels_defaults_alter() to
  allow the defaults to be customized.
* Indicated that the Length fields are stored in milliseconds.
* #1185506 by DamienMcKenna: The style Name field is actually required.
* #1230622 by davidwhthomas, DamienMcKenna: Separated admin functionality.
* #1148958 by lussoluca, DamienMcKenna: Added hook_menu_minipanels_style()
  and hook_menu_minipanels_styles() to allow creation of custom styles.
* #1185506 by DamienMcKenna: Indicate which fields are really required, don't
  output settings which are not required.
* #1230686 by muhleder, DamienMcKenna: Prevent duplicate content on DOM change.


Menu_MiniPanels 7.x-1.0-beta2, 2011-01-22
*****************************************
Bug fixes:
* Corrected the spelling of "qTip".
* D7 uses the class name 'main-menu' for the main menu UL by default.
* Changed to using hook_page_alter() instead of template_preprocess_page() to
  output the menus, seems like the correct option for D7.


Menu_MiniPanels 7.x-1.0-beta1, 2011-01-22
*****************************************
Initial port to Drupal 7.
* Changed the module to load the qTip script from sites/all/libraries.
* Small optimization - split the JS into two files so less code is loaded for
  most page views.
* Don't continue trying to load the menus if the qTip JS file has not been
  installed.