@@ -11,19 +11,29 @@
   Drupal.behaviors.menuMiniPanels = {
     attach: function(context, settings) {
       // Add the hovers to each appropriate menu item.
-      $('ul#main-menu li a:not(.minipanel-processed)', context).each(function() {
+      $('ul li a.menu-minipanel:not(.minipanel-processed)', context).each(function() {
         // Ensure that the panels are only processed once.
         $(this).addClass('minipanel-processed');
 
-        var matches = $(this).attr('class').match('menu-minipanel-([a-zA-Z0-9\_]+)');
-        // Only proceed if this menu item has a minipanel.
-        if (matches != undefined) {
-          var html = $('div.' + matches[1]).clone().show();
-          var panel_settings = settings.menuMinipanels.panels[matches[1]];
-          panel_settings['hide']['fixed'] = true;
-          panel_settings['content'] = html;
-          $(this).qtip(panel_settings);
+        var matches = $(this).attr('class').match('menu-minipanel-([0-9]+)');
+        var html = $('div.menu-minipanel-' + matches[1]).clone().show();
+        var settings = Drupal.settings.menuMinipanels.panels['panel_' + matches[1]];
+        settings['hide']['fixed'] = true;
+        // Specify a custom target.
+        if (settings['position']['target'] == 'custom') {
+          var target = $(settings['position']['target_custom']);
+          if (target.length > 0) {
+            settings['position']['target'] = target;
+          }
+          else {
+            settings['position']['target'] = false; 
+          }
         }
+        else {
+          settings['position']['target'] = false; 
+        }
+        settings['content'] = html;
+        $(this).qtip(settings);
       });
     }
   };
