@@ -66,7 +66,8 @@ function _menu_minipanels_hover_settings_form(&$base_form, $menu_minipanels_hove
   );
   $target_options = array(
     'element' => t('Element'),
-    'mouse' => t('Mouse')
+    'mouse' => t('Mouse'),
+    'custom' => t('Custom'),
   );
   $base_form['menu_minipanels_hover']['position']['target'] = array(
     '#type' => 'select',
@@ -75,6 +76,13 @@ function _menu_minipanels_hover_settings_form(&$base_form, $menu_minipanels_hove
     '#default_value' => isset($menu_minipanels_hover['position']['target']) ? $menu_minipanels_hover['position']['target'] : $defaults['position']['target'],
     '#options' => $target_options,
     '#required' => TRUE,
+  );
+  $base_form['menu_minipanels_hover']['position']['target_custom'] = array(
+    '#type' => 'textfield',
+    '#title' => t('Target Custom'),
+    '#description' => t('If \'custom\' is selected above, specify a jQuery selector, e.g. \'#header\' without the quotes.'),
+    '#default_value' => isset($menu_minipanels_hover['position']['target_custom']) ? $menu_minipanels_hover['position']['target_custom'] : $defaults['position']['target_custom'],
+    '#required' => FALSE,
   );
 
   $type_options = array(
@@ -269,6 +277,7 @@ function _menu_minipanels_hover_defaults() {
   $defaults = array(
     'position' => array(
       'target' =>  'element',
+      'target_custom' => '',
       'type' =>  'absolute',
       'corner' => array(
         'target' => 'bottomLeft',
